@@ -16,18 +16,18 @@
  */
 package jdplus.sts.base.core.msts.internal;
 
+import jdplus.sts.base.core.msts.ArInterpreter;
+import jdplus.sts.base.core.msts.MstsMapping;
+import jdplus.sts.base.core.msts.ParameterInterpreter;
 import jdplus.sts.base.core.msts.StateItem;
 import jdplus.toolkit.base.api.data.DoubleSeq;
 import jdplus.toolkit.base.core.arima.AutoCovarianceFunction;
 import jdplus.toolkit.base.core.math.polynomials.Polynomial;
-import jdplus.sts.base.core.msts.ArInterpreter;
-import jdplus.sts.base.core.msts.MstsMapping;
-import jdplus.toolkit.base.core.ssf.arima.SsfAr;
-import java.util.Collections;
-import java.util.List;
-import jdplus.sts.base.core.msts.ParameterInterpreter;
 import jdplus.toolkit.base.core.ssf.ISsfLoading;
 import jdplus.toolkit.base.core.ssf.StateComponent;
+import jdplus.toolkit.base.core.ssf.arima.SsfAr;
+
+import java.util.List;
 
 /**
  *
@@ -86,7 +86,7 @@ public class SaeItem extends StateItem {
 
     @Override
     public List<ParameterInterpreter> parameters() {
-        return Collections.singletonList(ar);
+        return List.of(ar);
     }
 
     @Override
