@@ -16,17 +16,17 @@
  */
 package jdplus.sts.base.core.msts.internal;
 
-import jdplus.sts.base.core.msts.StateItem;
-import jdplus.toolkit.base.api.data.DoubleSeq;
 import jdplus.sts.base.core.msts.MstsMapping;
-import jdplus.toolkit.base.core.ssf.sts.LocalLevel;
-import java.util.Collections;
-import java.util.List;
 import jdplus.sts.base.core.msts.ParameterInterpreter;
 import jdplus.sts.base.core.msts.ScaleInterpreter;
+import jdplus.sts.base.core.msts.StateItem;
+import jdplus.toolkit.base.api.data.DoubleSeq;
 import jdplus.toolkit.base.core.ssf.ISsfLoading;
 import jdplus.toolkit.base.core.ssf.StateComponent;
+import jdplus.toolkit.base.core.ssf.sts.LocalLevel;
 import jdplus.toolkit.base.core.ssf.sts.VarLocalLevel;
+
+import java.util.List;
 
 /**
  *
@@ -70,7 +70,7 @@ public class VarLocalLevelItem extends StateItem {
 
     @Override
     public List<ParameterInterpreter> parameters() {
-        return Collections.singletonList(scale);
+        return List.of(scale);
     }
 
     @Override
